grammar.js
    module: $ =>
      seq(
        optional($.version_declaration),
        choice($._library_module, $._main_module)
      ),
    _library_module: $ => seq($.module_declaration, $._prolog),
    _main_module: $ => seq(optional($._prolog), $._query_body),
    _expr: $ => choice( // statement like expressions all prec 2
      $._primary_expr,
      $.flwor_expr,
     $.quantified_expr,
     $.switch_expr,
     $.if_expr,
     $.typeswitch_expr,
     $.try_catch_expr,
    $.or_expr, // 83             prec: 3
    $.and_expr, // 84            prec: 4
    $.comparison_expr, // 85     prec: 5
    $.string_concat_expr, // 86  prec: 6
    $.range_expr, // 87          prec: 7
    $.additive_expr, // 88       prec: 8
    $.multiplicative_expr, // 89 prec: 9
    $.union_expr, // 90          prec: 10 
    $.intersect_except_expr,//91 prec: 11
    $.instance_of_expr, // 92    prec: 12
    $.treat_expr, // 93          prec: 13
    $.castable_expr, // 94       prec: 14
    $.cast_expr, // 95           prec: 15
    $.arrow_expr, // 96          prec: 16
    $.unary_expr, //  97         prec: 17 '-' '+' arithmetic prefix right to left
    $.bang_expr, //107           prec: 18
    $.path_expr, //108           prec: 19   '/' '//'  not relative path?
      //  $.predicate //124        prec: 20 @primary postfix predicate '[' ']'
      //  $.postfix_lookup //125   prec: 20 @primary postfix lookup   '?'
      //  $.unary_lookup,// 181    prec: 21 @primary unary lookup
      //seq($._primary_expr, optional( $._postfix_expr )) 
    ),
    // 3.1 Primary Expressions
    _primary_expr: $ => prec.left(PREC.primary,seq(choice(
      $._literal, // 57
      $.var_ref, // 59
      $.parenthesized_expr, // 133
      $.context_item_expr, // 134
      $.ordered_expr, // 135
      $.unordered_expr, // 136
      $.function_call, // 137
      $._direct_constructor,  // 141 node constructors 140 
      $._computed_constructor, // 155 // node constructors 140
      $.named_function_ref,   // 168  function item 167
      $.inline_function_expr, // 169 function item 167
      $.map_constructor, // 170
      $.square_array_constructor, // 175 array_constructor 174
      $.curly_array_constructor, // 176  array_constructor 174
      $.string_constructor, // 177
      $.unary_lookup // 181
     ), optional($._postfix_expr))),
    // 3.1.1 Literals
    string_literal: $ => choice(
        seq( '"', repeat(choice($.predefined_entity_ref, $.char_ref, $.escape_quote, /[^"&]/)),'"'),
        seq( "'", repeat(choice($.predefined_entity_ref, $.char_ref, $.escape_apos, /[^'&]/)),"'")),
    var_ref: $ => seq('$',  $.EQName ),
    // note: a dynamic function call can consist of _postfix_expr [ var_ref + argument_list ]
    // 3.1.3 Parenthesized Expressions
    parenthesized_expr: $ =>  seq('(', commaSep($._expr), ')'), // 133
    //3.1.4 Context Item Expression TODO not like spec
    context_item_expr: $ => prec.left(seq('.', optional( $.path_expr))),
    //3.1.5 Static Function Calls
    function_call: $ => prec.left(25,seq( 
      choice( field( 'dynamic', $.var_ref),field('static', $.EQName)),
      $.argument_list)), // 137 spec deviation added $var_ref
    //function_call: $ => prec.left(25 ,seq( $.EQName, $.argument_list)), // 137
    // 3.1.6 Named Function References
    enclosed_expr: $ => prec(1, seq('{', commaSep($._expr), '}')), // 5
    // 3.2 Postfix Expressions TODO
    //_postfix_expr: $ =>  seq($._primary_expr, optional(repeat1(choice($.predicate, $.argument_list, $.postfix_lookup)))), // 49
    predicate: $ => prec(20, seq( '[', field('filter', $._expr ), ']')), //124
    // 3.2.2 Dynamic Function Calls
    argument_list: $ => prec(1,seq('(', commaSep($.argument), ')')), // 122
    argument: $ => choice($._expr, $.argument_placeholder), // 138
    path_expr: $ => prec.left(19, 
      choice(
        seq('/', optional($._relative_path_expr)), //parse-note-leading-lone-slash
        seq( '//', $._relative_path_expr ),  // must have relative_path_expr 
        $._relative_path_expr  // can stand alone
      )
    ),
    _relative_path_expr: $ => prec.left(seq($._step_expr, optional( repeat1 (seq( choice('/', '//'), $._step_expr))))), //109 
    or_expr: $ => prec.left(3,seq( field('lhs', $._expr), 'or', field('rhs', $._expr))),
    and_expr: $ => prec.left(4,seq( field('lhs', $._expr), 'and', field('rhs', $._expr))),
    comparison_expr: $ => prec.left(5,seq(field('lhs',$._expr),choice('eq','ne','lt','le','gt','ge','=','!=','<','<=','>','>=','is','<<','>>'),field('rhs',$._expr))),
    string_concat_expr: $ => prec.left(6,seq(field('lhs', $._expr),repeat1(seq('||',field('rhs', $._expr))))), // 86
    multiplicative_expr: $ => prec.left(9,seq( field('lhs', $._expr), choice('*','div','idiv','mod'), field('rhs', $._expr))),
    instance_of_expr: $ => prec.left(12, seq(
      field('lhs', $._expr),
      seq('instance','of'),
      field('rhs', $.sequence_type))), // 92
    arrow_expr: $ => prec.left(16, seq( 
      field('rhs', $._expr), 
      repeat1( seq( '=>', $.arrow_function)))), // 94
    unary_expr: $ => prec.right(17, seq( choice('+','-'), $._expr)),
    bang_expr: $ => prec.left(18,seq(
          field('lhs', $._expr), // TODO
          repeat1( seq( '!', 
          field('rhs', $._expr)
        )))
      ), // 107
    single_type: $ => prec.left(seq($.EQName, optional('?'))), // 182
    comp_elem_constructor: $ => seq( 'element', $._name_content),
    comp_attr_constructor: $ => seq( 'attribute', $._name_content),
    _name_content: $ => seq(
     field('name', choice($.EQName, seq('{', commaSep($._expr), '}'))),
     field('content', $.enclosed_expr)),
    comp_doc_constructor: $ => seq( 'document', field('content', $.enclosed_expr)),
    comp_text_constructor: $ => seq( 'text', field('content', $.enclosed_expr)),
    comp_comment_constructor: $ => seq( 'comment', field('content', $.enclosed_expr)),
      string_constructor: $ => seq('``[', repeat( choice($.char_group, $.interpolation)), ']``'), // 177
    // TODO this is not correct  string content is external in other tree sitters
    interpolation: $ => seq('`{', commaSep($._expr), '}`'), // 1p80',
    //3.11 Maps and Arrays
    ordered_expr: $ => seq('ordered', $.enclosed_expr), // 135
    unordered_expr: $ => seq('unordered', $.enclosed_expr), // 136
    // 3.14 Conditional Expressions
    if_expr: $ => prec(2, seq($.if_condition, $.then_consequence, $.else_alternative)),
    if_condition: $ => seq('if', '(', $._expr, ')'),
    then_consequence: $ => seq('then', $._expr),
    else_alternative: $ => seq('else', $._expr),
    // 3.15 Switch Expression
    switch_expr: $ => prec(2,seq(
          'switch',
          $.switch_value,
          repeat1($.switch_clause),
          $.switch_default)), // 71
    switch_value: $ => seq('(', commaSep1($._expr), ')'), // 72
    switch_clause: $ =>
      seq(
        'case',
        field('operand', $._expr),
        'return',
        field('return', $._expr)
      ), // 72
    switch_default: $ => seq('default', 'return', field('return', $._expr)),
    // 3.16 Quantified Expressions TODO
    quantified_expr: $ => prec(2, seq(
          choice('some', 'every'),
          $.var_ref, optional($.type_declaration),
          'in', $._expr, 'satisfies', $._expr
        )
      ),
    // 3.17 Try/Catch Expressions
    try_catch_expr: $ => prec(2, seq($.try_clause, $.catch_clause)), // 78
    try_clause: $ => seq('try', $.enclosed_expr), // 78
    catch_clause: $ => seq('catch', $.catch_error_list, $.enclosed_expr), // 79
    catch_error_list: $ => seq($.name_test, repeat(seq('|', $.name_test))) ,
    typeswitch_expr: $ => prec(2,seq( 
      'typeswitch',
      $.typeswitch_operand,
      repeat1($.typeswitch_clause),
      $.typeswitch_default)), // 74
    // commaSep1( $._expr ),
    typeswitch_operand: $ =>
      seq('(', field('operand', commaSep1($._expr)), ')'), // 72
    typeswitch_clause: $ =>
      seq($.typeswitch_case_type, $.typeswitch_case_return), // 72
    typeswitch_case_type: $ =>
      seq('case', optional(seq($.var_ref, 'as')), $.sequence_type),
    typeswitch_case_return: $ => seq('return', $._expr),
    typeswitch_default: $ =>
      seq('default', optional($.var_ref), 'return', $._expr),
    //3.18.5 Constructor Functions TODO
    // 3.19 Simple map _operator (!)
    // 3.21 Validate Expressions TODO
    // 3.22 Extension Expressions TODO
    //4.1 Version Declaration
    sequence_type: $ => prec.left(choice($.empty_sequence, $._item)), // 184
    _item: $ => prec.right(seq($._item_type, optional($.occurrence_indicator))),
    text_test: $ => seq('text', '(',')'), // 191
    element_test: $ =>
    seq(
      'element',
      field('type_params', 
        seq(
          '(',
          optional( 
            $.element_test_params
            ),
          ')'
        ))
    ), // 199
    name_test: $ => prec.left(choice($.EQName, $.wildcard)), // TODO 199
    wildcard: $ =>
      choice( '*',
        seq($.NCName, ':*' ),
        seq('*:', $.NCName),
        seq($.braced_uri_literal, '*')
      ), // 120
    integer_literal: $ => token(INTEGER),
    identifier: $ => /[_A-Za-z]{1}[\-\w]*/,
