test/corpus/arrow_and_bang.txt
3.16 Arrow operator:
3.15 Simple map operator:

==================
3.19 Simple map operator: TODO
==================

$emp ! ( )

---

(xpath 
  (bang_expr 
    (var_ref (EQName))
    (bang_op)
    (parenthesized_expr)
))

==================
3.20 Arrow operator 
==================

$string => upper-case()

-------------------

(xpath 
 (arrow_expr 
  (var_ref (EQName)) 
  (arrow_op)
  (EQName)  
  (argument_list)
 ))
