test/corpus/path.txt
3.3 Path Expressions

==================
Path: 3.3.4 Unabbreviated Syntax  EQName
==================

./child::para

---

(xpath 
 (path_expr 
  (context_item_expr) 
  (path_op) 
  (forward_axis) 
  (EQName)
 ))

==================
Path: 3.3.4 Unabbreviated Syntax  wildcard
==================

./child::*

---

(xpath 
 (path_expr 
  (context_item_expr) 
  (path_op) 
  (forward_axis) (wildcard)
))

==================
Path: 3.3.4 Unabbreviated Syntax  EQName with filter predicate
==================

./child::para[1]

---
(xpath 
 (path_expr 
  (context_item_expr) 
  (path_op) 
  (forward_axis) 
  (EQName) 
  (predicate (integer_literal))
)) 

==================
Path: 3.3.4 Unabbreviated Syntax  EQName with filter predicate
==================

$node/child::para[1]

---
(xpath 
 (path_expr 
  (var_ref (EQName))
  (path_op) 
  (forward_axis) 
  (EQName) 
  (predicate (integer_literal))
)) 
