test/corpus/statements.txt

==================
Switch  - 3.15 Switch Expression
==================

switch ( $animal )
   case "Cow" return "Moo"
   case "Cat" return "Meow"
   case "Duck" return "Quack"
   default return "What's that odd noise?"

---

(module 
  (switch_expr 
    (switch_value (var_ref)) 
    (switch_case (string_literal) (string_literal)) 
    (switch_case (string_literal) (string_literal)) 
    (switch_case (string_literal) (string_literal)) 
    (switch_default (string_literal))
  ))

==================
If      - 3.14 Conditional Expressions
==================

if ( $part )
  then $part
  else $part

---
(module
 (if_expr 
  (if_condition 
    (var_ref)) 
  (if_consequence (var_ref)) 
  (if_alternative (var_ref))
))


==================
Some    - 3.16 Quantified Expressions 
==================

some $foo in $baa satisfies $boo

---
(module 
    (quantified_expr 
     (quantified_in (var_ref) (var_ref))
     (quantified_satisfies (var_ref))
))

==================
Try     - 3.17 Try/Catch Expressions
==================

try { 
} 
catch * { 
}

---

(module
 (try_catch_expr
  (try_clause (enclosed_expr))
  (catch_clause (name_test (wildcard)) (enclosed_expr))
 ))
