test/corpus/strings.txt
3.10 String Constructors and
3.1.1 Literals (string literal) and
3.6 String Concatenation Expressions 
==================
String: 3.6 String Concatenation Expr 
==================

"con" || "cat" || "enate"

---

(module 
 (string_concat_expr 
  (string_concat_expr 
   (string_literal) 
   (string_literal)) 
  (string_literal)
 ))

==================
String Constructor with interpolation TODO string content
==================

``[ TODO ]``

---

(module (string_constructor (string_content)))

==================
String Constructor with interpolation TODO string content
==================

``[ TODO `{ $foo }` ]``

---
(module 
 (string_constructor 
  (string_content 
   (interpolation 
    (var_ref (identifier)
)))))

==================
String Constructor with interpolation TODO string content
==================

``[ TODO `{ $foo }` todo ]``

---

(module 
 (string_constructor 
  (string_content 
   (interpolation (var_ref (identifier)))) 
  (string_content)
 ))


==================
Literal - string double quotes
==================

 "hello world"

---

(module (string_constructor))

==================
Literal - string single quotes
==================

 'hello world'

---

(module  (string_literal))

==================
Literal - string with escaped quotes
==================

"He said, ""I don't like it."""
---

(module  (string_literal))

==================
Literal - string with escape apos
==================

'He said, ''I don''t like it.'''

---

(module  (string_literal))

=================
Literal - string with predefined entity ref
==================

"Ben &amp; Jerry&apos;s"

---

(module  (string_literal))

==================
Literal - string with character reference
==================

"&#8364;99.50"

---

(module  (string_literal))

